# artificial-data-generator

./: .buildinfo  .gitignore  LICENSE  Makefile  README.md  check.bat  code-doc.html  format.bat  genindex.html  index.html  objects.inv  old_setup.py  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.cfg  setup.py
.github/workflows/: build_deploy_doc.yml  pypi_upload.yml
_modules/: index.html
_modules/artificial_data_generator/: artificial_data_generator.html
_modules/data_generator/: data_generator.html
_sources/: code-doc.rst.txt  index.rst.txt
artificial_data_generator/: 1-1-artificial_data_generator_basics.ipynb  1-artificial_data_generator_basics.ipynb  1.1-artificial_data_generator_basics.ipynb  1.2-artificial_data_generator_basics.ipynb  2-artificial_data_generator_tasks.ipynb  MC.docx  __init__.py  artificial_data_generator.ipynb  artificial_data_generator.py  artificial_data_generator_biomarkers1.ipynb  artificial_data_generator_example2.ipynb  artificial_data_generator_tools.py  visualizer.py
biomarker-data-generator/: biomarker-data-generator.py
biomarker_data_generator/: __init__.py  biomarker_data_generator.py
data_generator/: __init__.py  data_generator.py
docs/source/: code-doc.rst  conf.py  index.rst
examples/: artificial_biomarker_data_1.ipynb  artificial_biomarker_data_2.ipynb  artificial_data_generator_biomarkers1.ipynb  example.py
src/: __init__.py  artificial_data_generator.py
tests/: test_artificial_data_generator_tools.py
